--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,26 @@
 	</properties>
 
 	<dependencies>
+	
+		<dependency>
+  			<groupId>junit</groupId>
+  			<artifactId>junit</artifactId>
+  			<version>4.12</version>
+  			<scope>compile</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.3.2</version>
 			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+  			<groupId>org.junit.jupiter</groupId>
+  			<artifactId>junit-jupiter-engine</artifactId>
+  			<version>5.3.2</version>
+  			<scope>test</scope>
 		</dependency>
 		
 		<dependency>
@@ -86,6 +101,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+  				<artifactId>maven-surefire-plugin</artifactId>
+  				<version>2.22.0</version>
 			</plugin>
 		</plugins>
 	</build>
