--- a/pom.xml
+++ b/pom.xml
@@ -61,11 +61,16 @@
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 		
+  		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+<!--	
 		<dependency>
       		<groupId>org.postgresql</groupId>
       		<artifactId>postgresql</artifactId>
-   		</dependency>
-		
+  		</dependency>
+-->	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
